--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -20,3 +20,5 @@ test:
 # instead read values from the environment.
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  mandrill_username: <%= ENV["MANDRILL_USERNAME"] %>
+  mandrill_password: <%= ENV["MANDRILL_PASSWORD"] %>
